sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/Employee_Visa_Status__c.object-meta.xml
<CustomObject>
    <description>Employee Visa Statuses</description>
    <label>Employee Visa Status</label>
    <nameField>
        <displayFormat>EVN-{0000000}</displayFormat>
        <label>Visa Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Visa Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>