sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>Current Status</description>
    <inlineHelpText>Current Status</inlineHelpText>
    <label>Current Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>