sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Current_Visa__c.field-meta.xml
<CustomField>
    <fullName>Current_Visa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current Visa Record</description>
    <inlineHelpText>Current Visa Record</inlineHelpText>
    <label>Current Visa</label>
    <type>Checkbox</type>
</CustomField>