sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Documentation_Available__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Documentation Available</description>
    <inlineHelpText>Documentation Available</inlineHelpText>
    <label>Documentation Available</label>
    <type>Checkbox</type>
</CustomField>