sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Lookup</description>
    <inlineHelpText>Employee Lookup</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Visa Status</relationshipLabel>
    <relationshipName>Employee_Visa_Status</relationshipName>
    <type>Lookup</type>
</CustomField>