sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry Date</description>
    <inlineHelpText>Expiry Date</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>