sfSandBoxCode/force-app/main/default/objects/Employee_Visa_Status__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <description>Visa Status</description>
    <inlineHelpText>Visa Status</inlineHelpText>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internship Pass</fullName>
            </value>
            <value>
                <fullName>Multiple Journey Visa</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Special Pass</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>